# conways-gol

./: .gitignore  main.py  pyproject.toml
