[tool.poetry]
name = "conways-gol"
version = "0.1.0"
description = ""
authors = ["Matteo Barbieri <neopard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.3.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
